[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/wolfsheet1.png" type="Texture" id=1]
[ext_resource path="res://scripts/wolf.gd" type="Script" id=2]
[ext_resource path="res://scripts/Hitbox.gd" type="Script" id=3]
[ext_resource path="res://scripts/DamageArea.gd" type="Script" id=4]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
uniform vec4 flashColor : hint_color = vec4(1.0);
uniform float flashModifier : hint_range(0.0, 1.0) = 0.0;
void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rbg, flashColor.rbg, flashModifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/flashColor = Color( 0.411765, 0.431373, 0.568627, 1 )
shader_param/flashModifier = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 12.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 14.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 12.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 90, 22 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flashModifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WolfHeal"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flashModifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="wolf" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 320, 64, 64, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 22 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 4 )
playerDamage = 2.0
mechDamage = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 22, -6 )
shape = SubResource( 3 )

[node name="HealArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealArea"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/WolfHeal = SubResource( 8 )

[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_area_entered"]
[connection signal="area_entered" from="HealArea" to="." method="_on_HealArea_area_entered"]
[connection signal="area_exited" from="HealArea" to="." method="_on_HealArea_area_exited"]
